--- a/src/app/client/profiles/create-article/create-article.component.html
+++ b/src/app/client/profiles/create-article/create-article.component.html
@@ -188,7 +188,7 @@
                                                 <span class="input-group-text">m<sup>2</sup></span>
                                             </div>
                                         </div>
-                                        <small class="form-text text-muted">Tối thiểu 1000đ</small>
+                                        <small class="form-text text-muted">Tối thiểu 5m2</small>
                                     </div>
                                 </div>
 
