--- a/src/app/client/profiles/article-manager/article-manager.component.html
+++ b/src/app/client/profiles/article-manager/article-manager.component.html
@@ -49,7 +49,7 @@
                     </div> -->
 
                     <div class="d-none d-md-block">
-                        <div class="table-responsive">
+                        <div class="table-responsive" style="overflow-x: hidden;">
                             <table class="table table_post_listing table-bordered _table-hover">
                                 <thead>
                                     <tr>
@@ -101,14 +101,13 @@
                                                 <!-- <input type="number" class="form-control js-price" [formControlName]="'money'" [value]="paypalForm.get('money').value" name="amount_input" placeholder="Nhập số điểm"> -->
                                                 <input type="number" class="form-control js-price" name="amount_input" placeholder="Nhập số điểm">
                                             </div>
-                                            <span class="js-price-text" [ngStyle]="{'color':'green'}">123</span>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                             <div class="form-group row mb-30">
                                 <div class="col-md-6 col-sm-4 col-xs-12">
-                                    <button style="width: 403px;" type="submit" name="thanhtoan" class="btn btn-primary btn-block js-btn-hoan-tat" >Tăng điểm <svg xmlns="http://www.w3.org/2000/svg" width="403" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-right"><polyline points="9 18 15 12 9 6"></polyline></svg></button>
+                                    <button style="width: 403px;" type="submit" name="thanhtoan" class="btn btn-primary btn-block js-btn-hoan-tat" > Tăng điểm <svg xmlns="http://www.w3.org/2000/svg" width="403" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-right"><polyline points="9 18 15 12 9 6"></polyline></svg></button>
                                 </div>
                             </div>
                             <nav aria-label="Page navigation example">
