--- a/src/app/shared/confirmation-dialog/confirmation-dialog.component.html
+++ b/src/app/shared/confirmation-dialog/confirmation-dialog.component.html
@@ -3,6 +3,6 @@
    Bạn chắc chắn?
 </div>
 <div style="float:right;margin:20px;">
-  <input style="margin:0px 10px;" type="button" value="Confirm" [mat-dialog-close]="true">
-  <input type="button" value="Cancel"  [mat-dialog-close]="false">
+  <input style="margin:0px 10px;" type="button" value="Xác nhận" [mat-dialog-close]="true">
+  <input type="button" value="Hủy bỏ"  [mat-dialog-close]="false">
 </div>
