--- a/src/app/client/profiles/article-manager/article-manager.component.html
+++ b/src/app/client/profiles/article-manager/article-manager.component.html
@@ -76,8 +76,13 @@
                                             <span class="badge badge-pill badge-warning" *ngIf="article.roommate == null">Phòng trọ</span>
                                             <span class="badge badge-pill badge-warning" *ngIf="article.roommate != null">Tìm ở ghép</span>
                                             <a class="post_title" routerLink="/detail-article/{{article.articleId}}"style="color: #055699;">{{article.title}}</a>
+                                            <!-- Sửa lại -->
                                             <div class="post_btn_toolbar mt-3" *ngIf="article.status == 'Yêu cầu sửa lại'">
                                                 <a routerLink="/profile/update-article/{{article.articleId}}" class="btn btn-sm btn_danglai"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-refresh-ccw"><polyline points="1 4 1 10 7 10"></polyline><polyline points="23 20 23 14 17 14"></polyline><path d="M20.49 9A9 9 0 0 0 5.64 5.64L1 10m22 4l-4.64 4.36A9 9 0 0 1 3.51 15"></path></svg> Đăng lại tin</a>
+                                            </div>
+                                            <!-- Buff -->
+                                            <div class="post_btn_toolbar mt-3">
+                                                <a (click)="getArticleId(article.articleId)" class="btn btn-sm btn_danglai"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-refresh-ccw"><polyline points="1 4 1 10 7 10"></polyline><polyline points="23 20 23 14 17 14"></polyline><path d="M20.49 9A9 9 0 0 0 5.64 5.64L1 10m22 4l-4.64 4.36A9 9 0 0 1 3.51 15"></path></svg> Buff điểm</a>
                                             </div>
                                             <span style="display: block; color: #999; margin-top: 10px;">Cập nhật gần nhất: {{article.lastUpdateTime | date:'dd/MM/yyyy - HH:mm'}}</span>
                                         </td>
@@ -92,22 +97,25 @@
                                     </tr>
                                 </tbody>
                             </table>
-                            <div class="form-group mt-4">
-                                <p>Số điểm tương tác cộng thêm</p>
-                                <div class="row">
-                                    <div class="col-md-5 col-sm-12 col-xs-12">
-                                        <div class="js-price-wrapper">
-                                            <div class="input-group mb-3">
-                                                <!-- <input type="number" class="form-control js-price" [formControlName]="'money'" [value]="paypalForm.get('money').value" name="amount_input" placeholder="Nhập số điểm"> -->
-                                                <input type="number" class="form-control js-price" name="amount_input" placeholder="Nhập số điểm">
+                            <div  *ngIf="isBuff">
+                                <div class="form-group mt-4">
+                                    <p>Số điểm tương tác cộng thêm</p>
+                                    <div class="row">
+                                        <div class="col-md-5 col-sm-12 col-xs-12">
+                                            <div class="js-price-wrapper">
+                                                <div class="input-group mb-3">
+                                                    <!-- <input type="number" class="form-control js-price" [formControlName]="'money'" [value]="paypalForm.get('money').value" name="amount_input" placeholder="Nhập số điểm"> -->
+                                                    <input type="number" [formControl]="point" class="form-control js-price" name="amount_input" placeholder="Nhập số điểm">
+                                                    <span>{{point.value}}</span>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="form-group row mb-30">
-                                <div class="col-md-6 col-sm-4 col-xs-12">
-                                    <button style="width: 403px;" type="submit" name="thanhtoan" class="btn btn-primary btn-block js-btn-hoan-tat" > Tăng điểm <svg xmlns="http://www.w3.org/2000/svg" width="403" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-right"><polyline points="9 18 15 12 9 6"></polyline></svg></button>
+                                <div class="form-group row mb-30">
+                                    <div class="col-md-6 col-sm-4 col-xs-12">
+                                        <button (click)="onBuff()" style="width: 403px;" type="submit" name="thanhtoan" class="btn btn-primary btn-block js-btn-hoan-tat" > Tăng điểm <svg xmlns="http://www.w3.org/2000/svg" width="403" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-right"><polyline points="9 18 15 12 9 6"></polyline></svg></button>
+                                    </div>
                                 </div>
                             </div>
                             <nav aria-label="Page navigation example">
