--- a/src/app/client/profiles/article-manager/article-manager.component.html
+++ b/src/app/client/profiles/article-manager/article-manager.component.html
@@ -81,7 +81,7 @@
                                                 <a routerLink="/profile/update-article/{{article.articleId}}" class="btn btn-sm btn_danglai"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-refresh-ccw"><polyline points="1 4 1 10 7 10"></polyline><polyline points="23 20 23 14 17 14"></polyline><path d="M20.49 9A9 9 0 0 0 5.64 5.64L1 10m22 4l-4.64 4.36A9 9 0 0 1 3.51 15"></path></svg> Đăng lại tin</a>
                                             </div>
                                             <!-- Buff -->
-                                            <div class="post_btn_toolbar mt-3">
+                                            <div class="post_btn_toolbar mt-3" *ngIf="article.status == 'Đang đăng'">
                                                 <a (click)="getArticleId(article.articleId)" class="btn btn-sm btn_danglai"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-refresh-ccw"><polyline points="1 4 1 10 7 10"></polyline><polyline points="23 20 23 14 17 14"></polyline><path d="M20.49 9A9 9 0 0 0 5.64 5.64L1 10m22 4l-4.64 4.36A9 9 0 0 1 3.51 15"></path></svg> Buff điểm</a>
                                             </div>
                                             <span style="display: block; color: #999; margin-top: 10px;">Cập nhật gần nhất: {{article.lastUpdateTime | date:'dd/MM/yyyy - HH:mm'}}</span>
@@ -106,8 +106,9 @@
                                                 <div class="input-group mb-3">
                                                     <!-- <input type="number" class="form-control js-price" [formControlName]="'money'" [value]="paypalForm.get('money').value" name="amount_input" placeholder="Nhập số điểm"> -->
                                                     <input type="number" [formControl]="point" class="form-control js-price" name="amount_input" placeholder="Nhập số điểm">
-                                                    <span>{{point.value}}</span>
+                                                    
                                                 </div>
+                                                <div [ngStyle]="{'color':'green'}" *ngIf="point.value>=1">{{(point.value*1000)+10000 | currency:'VN': true}}</div>
                                             </div>
                                         </div>
                                     </div>
