--- a/src/app/client/clients-page/detail-newpaper/detail-newpaper.component.html
+++ b/src/app/client/clients-page/detail-newpaper/detail-newpaper.component.html
@@ -32,92 +32,42 @@
                             <p [innerHTML]="new?.content"></p>
                         </div>
                     </article>
-                    <section class="section section-blog-listing">
-                        <div class="section-header"><span class="section-title">Có thể bạn quan tâm</span></div>
-                        <div class="section-content">
-                            <div class="blog-listing">
-                                <div class="inner">
-                                    <article class="article-item clearfix"><a
-                                            href="https://PhongTroThanhXuan.com/uu-va-nhuoc-diem-cua-viec-o-tro-ban-nen-biet.html">
-                                            <figure><img class="lazy" src="./chi tiết bài báo_files/default.jpg"
-                                                    data-src="https://static123.com/PhongTroThanhXuan/uploads/images/thumbs/450x300/fit/2021/01/30/uu-va-nhuoc-diem-cua-o-tro_1611981473.jpg">
-                                            </figure>
-                                            <div class="article-meta">
-                                                <h6 class="article-title">Ưu và nhược điểm của việc ở trọ "bạn nên biết"
-                                                </h6>
-                                                <p class="article-summary">Nhược điểm của việc ở trọKhi nói đến việc ở
-                                                    trọ, sẽ có không ít hạn chế xuất hiện mà bản thân người thuê cũng
-                                                    khó lòng khắc phục mà phải…</p>
-                                            </div>
-                                        </a></article>
-                                    <article class="article-item clearfix"><a
-                                            href="https://PhongTroThanhXuan.com/top-5-website-dang-tin-cho-thue-mat-bang-hieu-qua-nhat-hien-nay.html">
-                                            <figure><img class="lazy" src="./chi tiết bài báo_files/default.jpg"
-                                                    data-src="https://static123.com/PhongTroThanhXuan/uploads/images/thumbs/450x300/fit/2020/06/09/chothuematbang01-1_1591697241.jpg">
-                                            </figure>
-                                            <div class="article-meta">
-                                                <h6 class="article-title">Top 5 website đăng tin cho thuê mặt bằng hiệu
-                                                    quả nhất hiện nay</h6>
-                                                <p class="article-summary">Muaban.netLà website rao vặt trực tuyến uy
-                                                    tín tại Việt Nam được quản lý với Công ty Cổ phần Mua Bán. Trang web
-                                                    chính thức được hoạt động từ ngày…</p>
-                                            </div>
-                                        </a></article>
-                                    <article class="article-item clearfix"><a
-                                            href="https://PhongTroThanhXuan.com/dang-tin-tim-nguoi-o-ghep-mien-phi-o-dau-hieu-qua.html">
-                                            <figure><img class="lazy" src="./chi tiết bài báo_files/default.jpg"
-                                                    data-src="https://static123.com/PhongTroThanhXuan/uploads/images/thumbs/450x300/fit/2020/03/13/trang-web-dang-tin-o-ghep-bds123_1584091714.png">
-                                            </figure>
-                                            <div class="article-meta">
-                                                <h6 class="article-title">Đăng tin tìm người ở ghép miễn phí ở đâu hiệu
-                                                    quả?</h6>
-                                                <p class="article-summary">Đã từ lâu, chuyện thuê trọ ở ghép trong giới
-                                                    sinh viên là hết sức bình thường, bởi tiền trọ, tiền cho các chi phí
-                                                    sinh hoạt phụ khác ở thành phố luôn…</p>
-                                            </div>
-                                        </a></article>
-                                    <article class="article-item clearfix"><a
-                                            href="https://PhongTroThanhXuan.com/kinh-nghiem/kinh-nghiem-chon-dat-dau-tu-xay-phong-tro-khong-bao-gio-lo.html">
-                                            <figure><img class="lazy" src="./chi tiết bài báo_files/default.jpg"
-                                                    data-src="https://static123.com/PhongTroThanhXuan/uploads/images/thumbs/450x300/fit/2019/09/07/dau-tu-dat-xay-phong-tro_1567824476.jpg">
-                                            </figure>
-                                            <div class="article-meta">
-                                                <h6 class="article-title">Kinh nghiệm chọn đất đầu tư xây phòng trọ
-                                                    không bao giờ lỗ</h6>
-                                                <p class="article-summary">Nhu cầu phòng trọ luôn tăng caoHiện nay, mỗi
-                                                    năm, các thành phố lớn trên cả nước như Hà Nội, Tp Hồ Chí Minh, Đà
-                                                    Nẵng,… đều có lượng người nhập…</p>
-                                            </div>
-                                        </a></article>
-                                    <article class="article-item clearfix"><a
-                                            href="https://PhongTroThanhXuan.com/kinh-nghiem/dang-tin-cho-thue-van-phong-o-dau-hieu-qua-nhat.html">
-                                            <figure><img class="lazy" src="./chi tiết bài báo_files/default.jpg"
-                                                    data-src="https://static123.com/PhongTroThanhXuan/uploads/images/thumbs/450x300/fit/2019/09/07/bds123-giao-dien_1567824794.png">
-                                            </figure>
-                                            <div class="article-meta">
-                                                <h6 class="article-title">Đăng tin cho thuê văn phòng ở đâu hiệu quả
-                                                    nhất?</h6>
-                                                <p class="article-summary">1. Bds123.vn (Đăng tin cho thuê văn phòng
-                                                    Miễn phí)Một Website về bất động sản lớn nhất hiện nay, với lượng
-                                                    khách truy cập hàng ngày nhiều, lượng tin…</p>
-                                            </div>
-                                        </a></article>
-                                    <article class="article-item clearfix"><a
-                                            href="https://PhongTroThanhXuan.com/kinh-nghiem/dang-tin-cho-thue-mat-bang-o-dau-nhanh-chong-va-hieu-qua-nhat.html">
-                                            <figure><img class="lazy" src="./chi tiết bài báo_files/default.jpg"
-                                                    data-src="https://static123.com/PhongTroThanhXuan/uploads/images/thumbs/450x300/fit/2019/09/07/bds123-giao-dien_1567824838.png">
-                                            </figure>
-                                            <div class="article-meta">
-                                                <h6 class="article-title">Đăng tin cho thuê mặt bằng ở đâu nhanh chóng
-                                                    và hiệu quả nhất?</h6>
-                                                <p class="article-summary">Hiển nhiên là đăng cho thuê mặt bằng tại
-                                                    PhongTroThanhXuan.com là tốt rồi. Nhưng PhongTroThanhXuan.com vẫn muốn giới
-                                                    thiệu đến các bạn các website khác đăng tin cũng…</p>
-                                            </div>
-                                        </a></article>
-                                </div>
+                    <section class="section section-post-listing">
+                        <div class="section-header"><span class="section-title">Bài viết chọn lọc</span></div>
+                        <ul class="post-listing grid clearfix">
+                            <div class="inner" >
+                                <li class="post-item clearfix tin-vip vipnoibat" style="border-color: #E13427;"
+                                    post-id="585180" *ngFor="let article of articleVip">
+                                    <figure><a routerLink="/detail-article/{{article.articleId}}">
+                                                <img class="lazy_done" src="{{article.image}}" alt="" height="100" width="100" layout="responsive" data-loaded="true">
+                                            </a><span class="images-number">{{(article.image.split(',')).length}} ảnh</span><span class="chothuenhanh-label"></span>
+                                            <span *ngIf="article.liked === false" class="post-save js-btn-save" data-post-id="585180" title="Lưu tin" (click)="onFavorite(article)">
+                                                <i></i>{{article.countLike}}
+                                            </span>
+                                            <span *ngIf="article.liked === true" class="post-save1 js-btn-save" data-post-id="585180" title="Bỏ lưu tin" (click)="onFavorite(article)">
+                                                <i></i>{{article.countLike}}
+                                            </span>
+                                    </figure>
+                                    <div class="post-meta">
+                                        <h4 class="post-title">
+                                            <a style="color: #E13427;" routerLink="/detail-article/{{article.articleId}}">{{article.title}}</a>
+                                            <span class="star star-5" *ngIf="article.vip == true"></span>
+                                        </h4>
+                                            <span class="post-price">
+                                                {{((article.roomPrice)/1000000).toFixed(1)}} triệu/tháng
+                                            </span>
+                                            <span class="post-acreage">
+                                                {{article.acreage}}m²
+                                            </span>
+                                            <span class="post-location">
+                                                <a title="Cho thuê Phòng trọ Quận Bình Thạnh, Hồ Chí Minh">{{article.location.districtName}},{{article.location.cityName}}</a>
+                                            </span>
+                                            <time class="post-time">Cập nhật: {{article.lastUpdateTime | date:'dd/MM/yyyy HH:mm'}}</time>
+                                            <span class="post-hot"></span>
+                                    </div>
+                                </li>
                             </div>
-                        </div>
+                        </ul>
                     </section>
                 </div>
                 <app-aside></app-aside>
