--- a/src/app/client/profiles/create-article/create-article.component.html
+++ b/src/app/client/profiles/create-article/create-article.component.html
@@ -197,6 +197,9 @@
                                     <div class="col-md-6">
                                         <div class="input-group">
                                             <input id="phone" type="number" [formControlName]="'electricPrice'" name="phone" class="form-control" placeholder="" value="">
+                                            <div class="input-group-append">
+                                                <span class="input-group-text">Số</span>
+                                            </div>
                                         </div>
                                         <small class="form-text text-muted">Tối thiểu 1000đ</small>
                                     </div>
@@ -207,6 +210,9 @@
                                     <div class="col-md-6">
                                         <div class="input-group">
                                             <input id="phone" type="number" [formControlName]="'waterPrice'" name="phone" class="form-control" placeholder="" value="">
+                                            <div class="input-group-append">
+                                                <span class="input-group-text">Khối</span>
+                                            </div>
                                         </div>
                                         <small class="form-text text-muted">Tối thiểu 1000đ</small>
                                     </div>
@@ -217,6 +223,9 @@
                                     <div class="col-md-6">
                                         <div class="input-group">
                                             <input id="phone" type="number" [formControlName]="'wifiPrice'" name="phone" class="form-control" placeholder="" value="">
+                                            <div class="input-group-append">
+                                                <span class="input-group-text">Tháng</span>
+                                            </div>
                                         </div>
                                         <small class="form-text text-muted">Tối thiểu 1000đ</small>
                                     </div>
