--- a/src/app/client/clients-page/detail-newpaper/detail-newpaper.component.css
+++ b/src/app/client/clients-page/detail-newpaper/detail-newpaper.component.css
@@ -3397,8 +3397,9 @@ figure img:hover {
     right: -5px
 }
 
+/* Tin nổi bật */
 .post-listing .post-item .post-title {
-    font-size: 1.1rem;
+    /* font-size: 1.1rem; */
     line-height: 1.5;
     font-weight: 700;
     display: block;
@@ -3407,10 +3408,13 @@ figure img:hover {
 }
 
 .post-listing .post-item .post-title a {
-    text-decoration: none;
-    display: block;
-    font-weight: 700;
-    text-transform: uppercase
+     width: 300px;
+    overflow: hidden; /* Ẩn đoạn text bị thừa*/
+    text-overflow: ellipsis; /*Cắt một đoạn text và thay thế bằng dấu …    */
+    line-height: 20px; 
+    -webkit-line-clamp: 2; /*2 dòng*/
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
 }
 
 .post-listing .post-item .post-title a:hover {
@@ -3422,7 +3426,39 @@ figure img:hover {
 }
 
 .post-listing .post-item.vipnoibat .post-title a {
-    padding-right: 20px
+    /* padding-right: 20px */
+}
+
+/* DANH SÁCH TIN ĐĂNG */
+.post-listing .post-item .post-title2 {
+    /* font-size: 1.1rem; */
+    line-height: 1.5;
+    font-weight: 700;
+    display: block;
+    white-space: normal;
+    margin: 0 0 10px
+}
+
+.post-listing .post-item .post-title2 a {
+     /* width: 300px; */
+    overflow: hidden;
+    text-overflow: ellipsis;
+    line-height: 20px;
+    -webkit-line-clamp: 2;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+}
+
+.post-listing .post-item .post-title2 a:hover {
+    text-decoration: underline
+}
+
+.post-listing .post-item.normal .post-title2 a {
+    text-transform: initial
+}
+
+.post-listing .post-item.vipnoibat .post-title2 a {
+    /* padding-right: 20px */
 }
 
 .post-listing .post-item .post-acreage, .post-listing .post-item .post-location, .post-listing .post-item .post-price, .post-listing .post-item .post-summary, .post-listing .post-item .post-time {
@@ -3445,6 +3481,7 @@ figure img:hover {
 }
 
 .post-listing .post-item .post-location a {
+    /* ssss */
     text-decoration: none;
     white-space: nowrap;
     text-overflow: ellipsis;
@@ -3465,6 +3502,7 @@ figure img:hover {
     font-size: .95rem
 }
 
+/* Liked = false */
 .post-listing .post-item .post-save {
     position: absolute;
     bottom: 0;
@@ -3475,19 +3513,50 @@ figure img:hover {
     align-items: center;
     justify-content: center;
     z-index: 1;
-    cursor: pointer
+    cursor: pointer;
+    /* color: white; */
+}
+
+/* Liked = true */
+.post-listing .post-item .post-save1 {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 1;
+    cursor: pointer;
+    /* color: white; */
 }
 
 .post-listing .post-item .post-save i {
     width: 20px;
     height: 20px;
-    /* background: url(../images/love.png) center no-repeat; */
+    background: url(https://www.freepnglogos.com/uploads/heart-png/file-heart-icon-hollow-5.png) center no-repeat;
     background-size: contain;
     display: inline-block
 }
 
 .post-listing .post-item .post-save.saved i, .post-listing .post-item .post-save:hover i {
-    /* background: url(../images/love-full-2.svg) center no-repeat; */
+    background: url(https://icons.iconarchive.com/icons/paomedia/small-n-flat/512/heart-icon.png) center no-repeat;
+    background-size: contain
+}
+
+/* Liked = true */
+.post-listing .post-item .post-save1 i {
+    width: 20px;
+    height: 20px;
+    background: url(https://icons.iconarchive.com/icons/paomedia/small-n-flat/512/heart-icon.png) center no-repeat;
+    background-size: contain;
+    display: inline-block
+}
+
+/* Liked = true */
+.post-listing .post-item .post-save1.saved i, .post-listing .post-item .post-save1:hover i {
+    background: url(https://www.freepnglogos.com/uploads/heart-png/file-heart-icon-hollow-5.png) center no-repeat;
     background-size: contain
 }
 
@@ -3891,9 +3960,9 @@ figure img:hover {
 } */
 /* Thêm */
 .star.star-5 {
-    width: 100px;
+    width: 20px;
     height: 20px;
-    background: url("https://www.pinclipart.com/picdir/middle/17-170999_christmas-christmas-star-clip-art-library-amazing.png") left center repeat-x;
+    background: url("https://www.pngjoy.com/pngm/45/1032332_vip-next-icon-cinema-vip-seating-transparent-png.png") left center repeat-x;
     background-size: 20px 20px;
     display: inline-block;
     margin-right: 3px;
@@ -4264,7 +4333,7 @@ figure img:hover {
 
 .the-post .post-price {
     font-size: 1.1rem;
-    margin: 10px 0 0
+    margin: 12px 0 0
 }
 
 .the-post .post-price .price {
@@ -4274,7 +4343,23 @@ figure img:hover {
     display: inline-flex;
     align-items: center
 }
+.the-post .post-price .post-price-item {
+    margin-left: 45px;
+    display: inline-block;
+    font-weight: 700;
+    font-size: 1.2rem
+}
 
+.the-post .post-price .post-price-item:first-of-type {
+    margin-left: 0
+}
+.the-post .post-price .post-price-item>span {
+    display: block;
+    margin-bottom: 5px;
+    font-weight: 400;
+    font-size: 1rem;
+    color: #777
+}
 .the-post .post-price .acreage {
     margin-left: 45px
 }
@@ -4775,3 +4860,41 @@ figure img:hover {
 }
 
 /*# sourceMappingURL=min.desktop.frontend.2021.css.map */
+agm-map {
+    width: 680px;
+    height: 320px;
+}
+.comment{    
+    /* --post-line-color: #ccc;     */
+    border: 1px solid #ccc;    
+    margin-bottom: 10px;
+    overflow: hidden;
+    background-color: rgba(255,255,255,0.8);
+    color: #878A8C;
+    position: relative;
+    border-radius: 4px;
+    padding:10px;
+}
+
+.star-1 {
+    width: 19px;
+    height: 17px;
+    background: url("https://www.pinclipart.com/picdir/middle/17-170999_christmas-christmas-star-clip-art-library-amazing.png") left center no-repeat;
+    background-size: 20px 20px;
+    display: inline-block;
+    margin-right: 3px;
+    float: none
+}
+
+.radio-label{
+    margin-left: 15px;
+}
+.radio-star{
+    margin-left: 10px;
+}
+
+.detail{
+    float: left;
+    margin-left: 440px;
+    margin-top: 4px;
+}
