--- a/src/app/client/profiles/article-manager/article-manager.component.html
+++ b/src/app/client/profiles/article-manager/article-manager.component.html
@@ -75,7 +75,7 @@
                                         <td>
                                             <span class="badge badge-pill badge-warning" *ngIf="article.roommate == null">Phòng trọ</span>
                                             <span class="badge badge-pill badge-warning" *ngIf="article.roommate != null">Tìm ở ghép</span>
-                                            <a class="post_title" routerLink="/detail-article/{{article.articleId}}"style="color: #055699;">{{article.title}}</a>
+                                            <a class="post_title" style="color: #055699;">{{article.title}}</a>
                                             <!-- Sửa lại -->
                                             <div class="post_btn_toolbar mt-3" *ngIf="article.status == 'Yêu cầu sửa lại'">
                                                 <a routerLink="/profile/update-article/{{article.articleId}}" class="btn btn-sm btn_danglai"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-refresh-ccw"><polyline points="1 4 1 10 7 10"></polyline><polyline points="23 20 23 14 17 14"></polyline><path d="M20.49 9A9 9 0 0 0 5.64 5.64L1 10m22 4l-4.64 4.36A9 9 0 0 1 3.51 15"></path></svg> Đăng lại tin</a>
